feat(resource-gateway): complete agent tdd scenario semantics